--- a/references.bib
+++ b/references.bib
@@ -69,6 +69,51 @@
   publisher={Now Publishers, Inc.}
 }
 
+@article{jain2017non,
+  title={Non-convex Optimization for Machine Learning},
+  author={Jain, Prateek and Kar, Purushottam},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={10},
+  number={3-4},
+  pages={142--336},
+  year={2017},
+  publisher={Now Publishers Inc. Hanover, MA, USA}
+}
+
+@book{blum2020foundations,
+  title={Foundations of data science},
+  author={Blum, Avrim and Hopcroft, John and Kannan, Ravindran},
+  year={2020},
+  publisher={Cambridge University Press}
+}
+
+@book{tao2012topics,
+  title={Topics in random matrix theory},
+  author={Tao, Terence},
+  volume={132},
+  year={2012},
+  publisher={American Mathematical Soc.}
+}
+
+@book{conway2019course,
+  title={A course in functional analysis},
+  author={Conway, John B},
+  volume={96},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{hazan2016introduction,
+  title={Introduction to online convex optimization},
+  author={Hazan, Elad and others},
+  journal={Foundations and Trends{\textregistered} in Optimization},
+  volume={2},
+  number={3-4},
+  pages={157--325},
+  year={2016},
+  publisher={Now Publishers, Inc.}
+}
+
 @inproceedings{clarkson2013low,
   title={Low rank approximation and regression in input sparsity time},
   author={Clarkson, Kenneth L and Woodruff, David P},
@@ -78,7 +123,7 @@
 }
 
 @inproceedings{jacot2018neural,
-  title={Neural tangent kernel: {C}onvergence and generalization in neural networks},
+  title={Neural tangent kernel: Convergence and generalization in neural networks},
   author={Jacot, Arthur and Gabriel, Franck and Hongler, Cl{\'e}ment},
   booktitle={Proceedings of the 32nd International Conference on Neural Information Processing Systems},
   pages={8580--8589},
@@ -89,17 +134,6 @@
   title={From Convex to Nonconvex Optimization: Algorithm Design and Global Convergence},
   author={Allen-Zhu, Zeyuan},
   year={2018}
-}
-
-@article{jain2017non,
-  title={Non-convex Optimization for Machine Learning},
-  author={Jain, Prateek and Kar, Purushottam},
-  journal={Foundations and Trends{\textregistered} in Machine Learning},
-  volume={10},
-  number={3-4},
-  pages={142--336},
-  year={2017},
-  publisher={Now Publishers Inc. Hanover, MA, USA}
 }
 
 @article{allen2018make,
@@ -128,14 +162,14 @@
 }
 
 @article{de2018convergence,
-  title={Convergence guarantees for RMSProp and ADAM in non-convex optimization and an empirical comparison to Nesterov acceleration},
+  title={Convergence guarantees for {RMSProp} and {Adam} in non-convex optimization and an empirical comparison to Nesterov acceleration},
   author={De, Soham and Mukherjee, Anirbit and Ullah, Enayat},
   journal={arXiv preprint arXiv:1807.06766},
   year={2018}
 }
 
 @article{defossez2020simple,
-  title = {A Simple Convergence Proof of {A}dam and {A}dagrad},
+  title = {A Simple Convergence Proof of {Adam} and {Adagrad}},
   author = {D{\'e}fossez, Alexandre and Bottou, L{\'e}on and Bach, Francis and Usunier, Nicolas},
   journal = {arXiv preprint arXiv:2003.02395},
   year = {2020}
@@ -187,18 +221,18 @@
 }
 
 @inproceedings{huang2019nostalgic,
-  title={Nostalgic {ADAM}: Weighting more of the past gradients when designing the adaptive learning rate},
+  title={Nostalgic {Adam}: Weighting more of the past gradients when designing the adaptive learning rate},
   author={Huang, Haiwen and Wang, Chang and Dong, Bin},
   booktitle={28th International Joint Conference on Artificial Intelligence, IJCAI 2019},
   pages={2556--2562},
   year={2019}
 }
 
-@article{kingma2014adam,
+@inproceedings{kingma2015adam,
   title={{Adam}: A method for stochastic optimization},
   author={Kingma, Diederik P and Ba, Jimmy},
-  journal={arXiv preprint arXiv:1412.6980},
-  year={2014}
+  booktitle={International Conference on Learning Representations},
+  year={2015}
 }
 
 @inproceedings{li2019convergence,
@@ -340,13 +374,6 @@
 }
 
 @article{chen2021visualgpt,
-  title={VisualGPT: Data-efficient Image Captioning by Balancing Visual Input and Linguistic Knowledge from Pretraining},
-  author={Chen, Jun and Guo, Han and Yi, Kai and Li, Boyang and Elhoseiny, Mohamed},
-  journal={arXiv preprint arXiv:2102.10407},
-  year={2021}
-}
-
-@article{chen2021visualgpt,
   title={VisualGPT: Data-efficient Adaptation of Pretrained Language Models for Image Captioning},
   author={Chen, Jun and Guo, Han and Yi, Kai and Li, Boyang and Elhoseiny, Mohamed},
   journal={arXiv preprint arXiv:2102.10407},
@@ -399,7 +426,7 @@
 }
 
 @article{arora2012multiplicative,
-  title={The multiplicative weights update method: a meta-algorithm and applications},
+  title={The multiplicative weights update method: A meta-algorithm and applications},
   author={Arora, Sanjeev and Hazan, Elad and Kale, Satyen},
   journal={Theory of computing},
   volume={8},
@@ -407,17 +434,6 @@
   pages={121--164},
   year={2012},
   publisher={Theory of Computing Exchange}
-}
-
-@article{hazan2016introduction,
-  title={Introduction to online convex optimization},
-  author={Hazan, Elad and others},
-  journal={Foundations and Trends{\textregistered} in Optimization},
-  volume={2},
-  number={3-4},
-  pages={157--325},
-  year={2016},
-  publisher={Now Publishers, Inc.}
 }
 
 @article{goodfellow2014generative,
@@ -428,25 +444,116 @@
   year={2014}
 }
 
-@book{blum2020foundations,
-  title={Foundations of data science},
-  author={Blum, Avrim and Hopcroft, John and Kannan, Ravindran},
-  year={2020},
-  publisher={Cambridge University Press}
+@article{cai2019gram,
+  title={Gram-gauss-newton method: Learning overparameterized neural networks for regression problems},
+  author={Cai, Tianle and Gao, Ruiqi and Hou, Jikai and Chen, Siyu and Wang, Dong and He, Di and Zhang, Zhihua and Wang, Liwei},
+  journal={arXiv preprint arXiv:1905.11675},
+  year={2019}
 }
 
-@book{tao2012topics,
-  title={Topics in random matrix theory},
-  author={Tao, Terence},
-  volume={132},
-  year={2012},
-  publisher={American Mathematical Soc.}
+@article{allen2016lazysvd,
+  title={LazySVD: Even faster SVD decomposition yet without agonizing pain},
+  author={Allen-Zhu, Zeyuan and Li, Yuanzhi},
+  journal={Advances in neural information processing systems},
+  volume={29},
+  year={2016}
 }
 
-@book{conway2019course,
-  title={A course in functional analysis},
-  author={Conway, John B},
-  volume={96},
+@inproceedings{allen2019convergence,
+  title={A convergence theory for deep learning via over-parameterization},
+  author={Allen-Zhu, Zeyuan and Li, Yuanzhi and Song, Zhao},
+  booktitle={International Conference on Machine Learning},
+  pages={242--252},
   year={2019},
-  publisher={Springer}
+  organization={PMLR}
 }
+
+@article{kawaguchi2016deep,
+  title={Deep learning without poor local minima},
+  author={Kawaguchi, Kenji},
+  journal={Advances in neural information processing systems},
+  volume={29},
+  year={2016}
+}
+
+@inproceedings{du2018gradient,
+  title={Gradient Descent Provably Optimizes Over-parameterized Neural Networks},
+  author={Du, Simon S and Zhai, Xiyu and Poczos, Barnabas and Singh, Aarti},
+  booktitle={International Conference on Learning Representations},
+  year={2018}
+}
+
+@inproceedings{du2019gradient,
+  title={Gradient descent finds global minima of deep neural networks},
+  author={Du, Simon and Lee, Jason and Li, Haochuan and Wang, Liwei and Zhai, Xiyu},
+  booktitle={International conference on machine learning},
+  pages={1675--1685},
+  year={2019},
+  organization={PMLR}
+}
+
+@inproceedings{arora2019fine,
+  title={Fine-grained analysis of optimization and generalization for overparameterized two-layer neural networks},
+  author={Arora, Sanjeev and Du, Simon and Hu, Wei and Li, Zhiyuan and Wang, Ruosong},
+  booktitle={International Conference on Machine Learning},
+  pages={322--332},
+  year={2019},
+  organization={PMLR}
+}
+
+@article{arora2019exact,
+  title={On exact computation with an infinitely wide neural net},
+  author={Arora, Sanjeev and Du, Simon S and Hu, Wei and Li, Zhiyuan and Salakhutdinov, Russ R and Wang, Ruosong},
+  journal={Advances in Neural Information Processing Systems},
+  volume={32},
+  year={2019}
+}
+
+@article{allen2019learning,
+  title={Learning and generalization in overparameterized neural networks, going beyond two layers},
+  author={Allen-Zhu, Zeyuan and Li, Yuanzhi and Liang, Yingyu},
+  journal={Advances in neural information processing systems},
+  volume={32},
+  year={2019}
+}
+
+@inproceedings{gutmann2010noise,
+  title={Noise-contrastive estimation: A new estimation principle for unnormalized statistical models},
+  author={Gutmann, Michael and Hyv{\"a}rinen, Aapo},
+  booktitle={Proceedings of the thirteenth international conference on artificial intelligence and statistics},
+  pages={297--304},
+  year={2010},
+  organization={JMLR Workshop and Conference Proceedings}
+}
+
+@article{rhodes2020telescoping,
+  title={Telescoping density-ratio estimation},
+  author={Rhodes, Benjamin and Xu, Kai and Gutmann, Michael U},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={4905--4916},
+  year={2020}
+}
+
+@article{liu2021analyzing,
+  title={Analyzing and Improving the Optimization Landscape of Noise-Contrastive Estimation},
+  author={Liu, Bingbin and Rosenfeld, Elan and Ravikumar, Pradeep and Risteski, Andrej},
+  journal={arXiv preprint arXiv:2110.11271},
+  year={2021}
+}
+
+@inproceedings{devlin2019bert,
+  title={{BERT}: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+  author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  booktitle={Proceedings of the 2019 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long and Short Papers)},
+  pages={4171--4186},
+  year={2019}
+}
+
+@article{zhang2019gradient,
+  title={Why gradient clipping accelerates training: A theoretical justification for adaptivity},
+  author={Zhang, Jingzhao and He, Tianxing and Sra, Suvrit and Jadbabaie, Ali},
+  journal={arXiv preprint arXiv:1905.11881},
+  year={2019}
+}
+
