--- a/references.bib
+++ b/references.bib
@@ -154,11 +154,11 @@
   organization={PMLR}
 }
 
-@inproceedings{chen2018convergence,
+@inproceedings{chen2019convergence,
   title={On the Convergence of A Class of {Adam}-Type Algorithms for Non-Convex Optimization},
   author={Chen, Xiangyi and Liu, Sijia and Sun, Ruoyu and Hong, Mingyi},
   booktitle={International Conference on Learning Representations},
-  year={2018}
+  year={2019}
 }
 
 @article{de2018convergence,
@@ -341,11 +341,11 @@
   organization={Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik}
 }
 
-@inproceedings{cohen2020gradient,
+@inproceedings{cohen2021gradient,
   title={Gradient Descent on Neural Networks Typically Occurs at the Edge of Stability},
   author={Cohen, Jeremy and Kaur, Simran and Li, Yuanzhi and Kolter, J Zico and Talwalkar, Ameet},
   booktitle={International Conference on Learning Representations},
-  year={2020}
+  year={2021}
 }
 
 @book{martens2016second,
@@ -366,11 +366,11 @@
   publisher={SIAM}
 }
 
-@inproceedings{jacot2019asymptotic,
+@inproceedings{jacot2020asymptotic,
   title={The asymptotic spectrum of the Hessian of {DNN} throughout training},
   author={Jacot, Arthur and Gabriel, Franck and Hongler, Clement},
   booktitle={International Conference on Learning Representations},
-  year={2019}
+  year={2020}
 }
 
 @article{chen2021visualgpt,
@@ -476,14 +476,14 @@
   year={2016}
 }
 
-@inproceedings{du2018gradient,
+@inproceedings{du2019gradient,
   title={Gradient Descent Provably Optimizes Over-parameterized Neural Networks},
   author={Du, Simon S and Zhai, Xiyu and Poczos, Barnabas and Singh, Aarti},
   booktitle={International Conference on Learning Representations},
-  year={2018}
+  year={2019}
 }
 
-@inproceedings{du2019gradient,
+@inproceedings{du2019gradient2,
   title={Gradient descent finds global minima of deep neural networks},
   author={Du, Simon and Lee, Jason and Li, Haochuan and Wang, Liwei and Zhai, Xiyu},
   booktitle={International conference on machine learning},
@@ -557,3 +557,113 @@
   year={2019}
 }
 
+@article{vaswani2017attention,
+  title={Attention is all you need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
+
+@article{tripuraneni2020theory,
+  title={On the theory of transfer learning: The importance of task diversity},
+  author={Tripuraneni, Nilesh and Jordan, Michael and Jin, Chi},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={7852--7862},
+  year={2020}
+}
+
+@inproceedings{kumar2022fine,
+  title={Fine-Tuning can Distort Pretrained Features and Underperform Out-of-Distribution},
+  author={Kumar, Ananya and Raghunathan, Aditi and Jones, Robbie Matthew and Ma, Tengyu and Liang, Percy},
+  booktitle={International Conference on Learning Representations},
+  year={2022}
+}
+
+@article{santurkar2018does,
+  title={How does batch normalization help optimization?},
+  author={Santurkar, Shibani and Tsipras, Dimitris and Ilyas, Andrew and Madry, Aleksander},
+  journal={Advances in Neural Information Processing Systems},
+  volume={31},
+  year={2018}
+}
+
+@inproceedings{wu2020understanding,
+  title={Understanding and Improving Information Transfer in Multi-Task Learning},
+  author={Wu, Sen and Zhang, Hongyang R and R{\'e}, Christopher},
+  booktitle={International Conference on Learning Representations},
+  year={2020}
+}
+
+@article{chua2021fine,
+  title={How fine-tuning allows for effective meta-learning},
+  author={Chua, Kurtland and Lei, Qi and Lee, Jason D},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  pages={8871--8884},
+  year={2021}
+}
+
+@article{power2022grokking,
+  title={Grokking: Generalization beyond overfitting on small algorithmic datasets},
+  author={Power, Alethea and Burda, Yuri and Edwards, Harri and Babuschkin, Igor and Misra, Vedant},
+  journal={arXiv preprint arXiv:2201.02177},
+  year={2022}
+}
+
+@inproceedings{xie2021explanation,
+  title={An Explanation of In-context Learning as Implicit Bayesian Inference},
+  author={Xie, Sang Michael and Raghunathan, Aditi and Liang, Percy and Ma, Tengyu},
+  booktitle={International Conference on Learning Representations},
+  year={2021}
+}
+
+@article{thilak2022slingshot,
+  title={The Slingshot Mechanism: An Empirical Study of Adaptive Optimizers and the Grokking Phenomenon},
+  author={Thilak, Vimal and Littwin, Etai and Zhai, Shuangfei and Saremi, Omid and Paiss, Roni and Susskind, Joshua},
+  journal={arXiv preprint arXiv:2206.04817},
+  year={2022}
+}
+
+@article{liu2022towards,
+  title={Towards Understanding Grokking: An Effective Theory of Representation Learning},
+  author={Liu, Ziming and Kitouni, Ouail and Nolte, Niklas and Michaud, Eric J and Tegmark, Max and Williams, Mike},
+  journal={arXiv preprint arXiv:2205.10343},
+  year={2022}
+}
+
+@inproceedings{kong2020meta,
+  title={Meta-learning for mixed linear regression},
+  author={Kong, Weihao and Somani, Raghav and Song, Zhao and Kakade, Sham and Oh, Sewoong},
+  booktitle={International Conference on Machine Learning},
+  pages={5394--5404},
+  year={2020},
+  organization={PMLR}
+}
+
+@inproceedings{chen2020simple,
+  title={A simple framework for contrastive learning of visual representations},
+  author={Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
+  booktitle={International conference on machine learning},
+  pages={1597--1607},
+  year={2020},
+  organization={PMLR}
+}
+
+@article{maurer2016benefit,
+  title={The benefit of multitask representation learning},
+  author={Maurer, Andreas and Pontil, Massimiliano and Romera-Paredes, Bernardino},
+  journal={Journal of Machine Learning Research},
+  volume={17},
+  number={81},
+  pages={1--32},
+  year={2016}
+}
+
+@article{zou2021understanding,
+  title={Understanding the generalization of {Adam} in learning neural networks with proper regularization},
+  author={Zou, Difan and Cao, Yuan and Li, Yuanzhi and Gu, Quanquan},
+  journal={arXiv preprint arXiv:2108.11371},
+  year={2021}
+}
