Update beamer template

--- a/beamer_template.tex
+++ b/beamer_template.tex
@@ -1,9 +1,9 @@
 \documentclass{beamer}
+\usepackage{panyan_beamer}
 \title{Template}
 \author{Yan Pan}
 \institute{Carnegie Mellon University}
 \date{\today}
-\input{math.tex}
 
 \begin{document}
 \frame{\titlepage}
