--- a/references.bib
+++ b/references.bib
@@ -667,3 +667,85 @@
   journal={arXiv preprint arXiv:2108.11371},
   year={2021}
 }
+
+@article{cooley1965algorithm,
+  title={An algorithm for the machine calculation of complex Fourier series},
+  author={Cooley, James W and Tukey, John W},
+  journal={Mathematics of computation},
+  volume={19},
+  number={90},
+  pages={297--301},
+  year={1965},
+  publisher={JSTOR}
+}
+
+@inproceedings{ji2020polylogarithmic,
+  title={Polylogarithmic width suffices for gradient descent to achieve arbitrarily small test error with shallow {ReLU} networks},
+  author={Ji, Ziwei and Telgarsky, Matus},
+  booktitle={International Conference on Learning Representations},
+  year={2020}
+}
+
+@article{munteanu2022bounding,
+  title={Bounding the Width of Neural Networks via Coupled Initialization--A Worst Case Analysis},
+  author={Munteanu, Alexander and Omlor, Simon and Song, Zhao and Woodruff, David P},
+  journal={arXiv preprint arXiv:2206.12802},
+  year={2022}
+}
+
+@inproceedings{song2021fast,
+  title={Fast sketching of polynomial kernels of polynomial degree},
+  author={Song, Zhao and Woodruff, David and Yu, Zheng and Zhang, Lichen},
+  booktitle={International Conference on Machine Learning},
+  pages={9812--9823},
+  year={2021},
+  organization={PMLR}
+}
+
+@article{arora2022understanding,
+  title={Understanding Gradient Descent on Edge of Stability in Deep Learning},
+  author={Arora, Sanjeev and Li, Zhiyuan and Panigrahi, Abhishek},
+  journal={arXiv preprint arXiv:2205.09745},
+  year={2022}
+}
+
+@article{ahn2022understanding,
+  title={Understanding the unstable convergence of gradient descent},
+  author={Ahn, Kwangjun and Zhang, Jingzhao and Sra, Suvrit},
+  journal={arXiv preprint arXiv:2204.01050},
+  year={2022}
+}
+
+@article{balles2020geometry,
+  title={The geometry of sign gradient descent},
+  author={Balles, Lukas and Pedregosa, Fabian and Roux, Nicolas Le},
+  journal={arXiv preprint arXiv:2002.08056},
+  year={2020}
+}
+
+@inproceedings{balles2018dissecting,
+  title={Dissecting {Adam}: The sign, magnitude and variance of stochastic gradients},
+  author={Balles, Lukas and Hennig, Philipp},
+  booktitle={International Conference on Machine Learning},
+  pages={404--413},
+  year={2018},
+  organization={PMLR}
+}
+
+@inproceedings{sun2016deep,
+  title={Deep {CORAL}: Correlation alignment for deep domain adaptation},
+  author={Sun, Baochen and Saenko, Kate},
+  booktitle={European conference on computer vision},
+  pages={443--450},
+  year={2016},
+  organization={Springer}
+}
+
+@inproceedings{xie2020adversarial,
+  title={Adversarial examples improve image recognition},
+  author={Xie, Cihang and Tan, Mingxing and Gong, Boqing and Wang, Jiang and Yuille, Alan L and Le, Quoc V},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={819--828},
+  year={2020}
+}
+
