Update beamer style

--- a/beamer_template.tex
+++ b/beamer_template.tex
@@ -1,5 +1,7 @@
 \documentclass{beamer}
 \usepackage{panyan_beamer}
+\usetheme{Madrid}
+\usecolortheme{default}
 \title{Template}
 \author{Yan Pan}
 \institute{Carnegie Mellon University}
