--- a/panyan_beamer.sty
+++ b/panyan_beamer.sty
@@ -18,9 +18,11 @@
     colorlinks=true,
     citecolor=blue,
     filecolor=magenta,
-    linkcolor=red,
+    linkcolor=.,
     urlcolor=cyan
 }
+\addtobeamertemplate{headline}{\hypersetup{linkcolor=.}}{}
+\addtobeamertemplate{footline}{\hypersetup{linkcolor=.}}{}
 
 \setlength{\parindent}{2em}
 \setlength{\parskip}{0.5em}
