--- a/references.bib
+++ b/references.bib
@@ -550,13 +550,6 @@
   year={2019}
 }
 
-@article{zhang2019gradient,
-  title={Why gradient clipping accelerates training: A theoretical justification for adaptivity},
-  author={Zhang, Jingzhao and He, Tianxing and Sra, Suvrit and Jadbabaie, Ali},
-  journal={arXiv preprint arXiv:1905.11881},
-  year={2019}
-}
-
 @article{vaswani2017attention,
   title={Attention is all you need},
   author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
@@ -747,5 +740,19 @@
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
   pages={819--828},
   year={2020}
+}
+
+@inproceedings{zhang2020gradient,
+  title={Why Gradient Clipping Accelerates Training: A Theoretical Justification for Adaptivity},
+  author={Zhang, Jingzhao and He, Tianxing and Sra, Suvrit and Jadbabaie, Ali},
+  booktitle={International Conference on Learning Representations},
+  year={2020}
+}
+
+@article{wen2022mechanism,
+  title={The Mechanism of Prediction Head in Non-contrastive Self-supervised Learning},
+  author={Wen, Zixin and Li, Yuanzhi},
+  journal={arXiv preprint arXiv:2205.06226},
+  year={2022}
 }
 
