--- a/references.bib
+++ b/references.bib
@@ -679,13 +679,6 @@
   year={2020}
 }
 
-@article{munteanu2022bounding,
-  title={Bounding the Width of Neural Networks via Coupled Initialization--A Worst Case Analysis},
-  author={Munteanu, Alexander and Omlor, Simon and Song, Zhao and Woodruff, David P},
-  journal={arXiv preprint arXiv:2206.12802},
-  year={2022}
-}
-
 @inproceedings{song2021fast,
   title={Fast sketching of polynomial kernels of polynomial degree},
   author={Song, Zhao and Woodruff, David and Yu, Zheng and Zhang, Lichen},
@@ -754,5 +747,73 @@
   author={Wen, Zixin and Li, Yuanzhi},
   journal={arXiv preprint arXiv:2205.06226},
   year={2022}
+}
+
+@inproceedings{wen2021toward,
+  title={Toward understanding the feature learning process of self-supervised contrastive learning},
+  author={Wen, Zixin and Li, Yuanzhi},
+  booktitle={International Conference on Machine Learning},
+  pages={11112--11122},
+  year={2021},
+  organization={PMLR}
+}
+
+@inproceedings{ahle2020oblivious,
+  title={Oblivious sketching of high-degree polynomial kernels},
+  author={Ahle, Thomas D and Kapralov, Michael and Knudsen, Jakob BT and Pagh, Rasmus and Velingker, Ameya and Woodruff, David P and Zandieh, Amir},
+  booktitle={Proceedings of the Fourteenth Annual ACM-SIAM Symposium on Discrete Algorithms},
+  pages={141--160},
+  year={2020},
+  organization={SIAM}
+}
+
+@inproceedings{munteanu2022bounding,
+  title={Bounding the Width of Neural Networks via Coupled Initialization -- A Worst Case Analysis},
+  author={Munteanu, Alexander and Omlor, Simon and Song, Zhao and Woodruff, David},
+  booktitle={International Conference on Machine Learning},
+  pages={16083--16122},
+  year={2022},
+  organization={PMLR}
+}
+
+@inproceedings{hron2020infinite,
+  title={Infinite attention: {NNGP} and {NTK} for deep attention networks},
+  author={Hron, Jiri and Bahri, Yasaman and Sohl-Dickstein, Jascha and Novak, Roman},
+  booktitle={International Conference on Machine Learning},
+  pages={4376--4386},
+  year={2020},
+  organization={PMLR}
+}
+
+@inproceedings{zhang2019gradient,
+  title={Why Gradient Clipping Accelerates Training: A Theoretical Justification for Adaptivity},
+  author={Zhang, Jingzhao and He, Tianxing and Sra, Suvrit and Jadbabaie, Ali},
+  booktitle={International Conference on Learning Representations},
+  year={2019}
+}
+
+@article{nagarajan2019generalization,
+  title={Generalization in deep networks: The role of distance from initialization},
+  author={Nagarajan, Vaishnavh and Kolter, J Zico},
+  journal={arXiv preprint arXiv:1901.01672},
+  year={2019}
+}
+
+@article{cohen2022adaptive,
+  title={Adaptive Gradient Methods at the Edge of Stability},
+  author={Cohen, Jeremy M and Ghorbani, Behrooz and Krishnan, Shankar and Agarwal, Naman and Medapati, Sourabh and Badura, Michal and Suo, Daniel and Cardoze, David and Nado, Zachary and Dahl, George E and others},
+  journal={arXiv preprint arXiv:2207.14484},
+  year={2022}
+}
+
+@article{barakat2021convergence,
+  title={Convergence and dynamical behavior of the ADAM algorithm for nonconvex stochastic optimization},
+  author={Barakat, Anas and Bianchi, Pascal},
+  journal={SIAM Journal on Optimization},
+  volume={31},
+  number={1},
+  pages={244--274},
+  year={2021},
+  publisher={SIAM}
 }
 
