Update sty and bib

--- a/panyan.sty
+++ b/panyan.sty
@@ -129,6 +129,8 @@
 \DeclareMathOperator{\tw}{tw} % tree width
 \DeclareMathOperator{\ex}{ex} % extremal
 \DeclareMathOperator{\dom}{dom}
+\DeclareMathOperator{\im}{im}
+\newcommand{\stirlingnum}{\genfrac{\{}{\}}{0pt}{}}
 
 % number systems
 \newcommand{\R}{\mathbb{R}}
