--- a/references.bib
+++ b/references.bib
@@ -169,17 +169,17 @@
 }
 
 @article{defossez2020simple,
-  title = {A Simple Convergence Proof of {Adam} and {Adagrad}},
-  author = {D{\'e}fossez, Alexandre and Bottou, L{\'e}on and Bach, Francis and Usunier, Nicolas},
-  journal = {arXiv preprint arXiv:2003.02395},
-  year = {2020}
+  title={A Simple Convergence Proof of {Adam} and {Adagrad}},
+  author={D{\'e}fossez, Alexandre and Bottou, L{\'e}on and Bach, Francis and Usunier, Nicolas},
+  journal={arXiv preprint arXiv:2003.02395},
+  year={2020}
 }
 
 @article{dou2021one,
-  title = {On the One-sided Convergence of {Adam}-type Algorithms in Non-convex Non-concave Min-max Optimization},
-  author = {Dou, Zehao and Li, Yuanzhi},
-  journal = {arXiv preprint arXiv:2109.14213},
-  year = {2021}
+  title={On the One-sided Convergence of {Adam}-type Algorithms in Non-convex Non-concave Min-max Optimization},
+  author={Dou, Zehao and Li, Yuanzhi},
+  journal={arXiv preprint arXiv:2109.14213},
+  year={2021}
 }
 
 @article{duchi2011adaptive,
@@ -277,10 +277,10 @@
 }
 
 @article{yang2016unified,
- author = {Yang, Tianbao and Lin, Qihang and Li, Zhe},
- journal = {arXiv preprint arXiv:1604.03257},
- title = {Unified convergence analysis of stochastic momentum methods for convex and non-convex optimization},
- year = {2016}
+ author={Yang, Tianbao and Lin, Qihang and Li, Zhe},
+ journal={arXiv preprint arXiv:1604.03257},
+ title={Unified convergence analysis of stochastic momentum methods for convex and non-convex optimization},
+ year={2016}
 }
 
 @article{zhang2020adaptive,
@@ -292,10 +292,10 @@
 }
 
 @article{zhou2018convergence,
- author = {Zhou, Dongruo and Chen, Jinghui and Cao, Yuan and Tang, Yiqi and Yang, Ziyan and Gu, Quanquan},
- journal = {arXiv preprint arXiv:1808.05671},
- title = {On the convergence of adaptive gradient methods for nonconvex optimization},
- year = {2018}
+ author={Zhou, Dongruo and Chen, Jinghui and Cao, Yuan and Tang, Yiqi and Yang, Ziyan and Gu, Quanquan},
+ journal={arXiv preprint arXiv:1808.05671},
+ title={On the convergence of adaptive gradient methods for nonconvex optimization},
+ year={2018}
 }
 
 @inproceedings{zou2019sufficient,
@@ -817,3 +817,162 @@
   publisher={SIAM}
 }
 
+@article{radford2019language,
+  title={Language models are unsupervised multitask learners},
+  author={Radford, Alec and Wu, Jeffrey and Child, Rewon and Luan, David and Amodei, Dario and Sutskever, Ilya},
+  year={2019}
+}
+
+@inproceedings{shazeer2018adafactor,
+  title={Adafactor: Adaptive learning rates with sublinear memory cost},
+  author={Shazeer, Noam and Stern, Mitchell},
+  booktitle={International Conference on Machine Learning},
+  pages={4596--4604},
+  year={2018},
+  organization={PMLR}
+}
+
+@inproceedings{tiedemann2012parallel,
+  title={Parallel Data, Tools and Interfaces in {OPUS}},
+  author={Tiedemann, J{\"o}rg},
+  booktitle={Eight International Conference on Language Resources and Evaluation, MAY 21-27, 2012, Istanbul, Turkey},
+  pages={2214--2218},
+  year={2012}
+}
+
+@inproceedings{maas2011learning,
+  title={Learning word vectors for sentiment analysis},
+  author={Maas, Andrew and Daly, Raymond E and Pham, Peter T and Huang, Dan and Ng, Andrew Y and Potts, Christopher},
+  booktitle={Proceedings of the 49th annual meeting of the association for computational linguistics: Human language technologies},
+  pages={142--150},
+  year={2011}
+}
+
+@article{raffel2020exploring,
+  title={Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer},
+  author={Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J},
+  journal={Journal of Machine Learning Research},
+  volume={21},
+  pages={1--67},
+  year={2020}
+}
+
+@article{sanh2019distilbert,
+  title={{DistilBERT}, a distilled version of {BERT}: smaller, faster, cheaper and lighter},
+  author={Sanh, Victor and Debut, Lysandre and Chaumond, Julien and Wolf, Thomas},
+  journal={arXiv preprint arXiv:1910.01108},
+  year={2019}
+}
+
+@article{armijo1966minimization,
+  title={Minimization of functions having {Lipschitz} continuous first partial derivatives},
+  author={Armijo, Larry},
+  journal={Pacific Journal of mathematics},
+  volume={16},
+  number={1},
+  pages={1--3},
+  year={1966},
+  publisher={Mathematical Sciences Publishers}
+}
+
+@article{polyakintroduction,
+  title={Introduction to optimization. 1987},
+  author={Polyak, Boris T},
+  journal={Optimization Software, Inc, New York}
+}
+
+@article{tieleman2012lecture,
+  title={Lecture 6.5-rmsprop: Divide the gradient by a running average of its recent magnitude},
+  author={Tieleman, Tijmen and Hinton, Geoffrey and others},
+  journal={COURSERA: Neural networks for machine learning},
+  volume={4},
+  number={2},
+  pages={26--31},
+  year={2012}
+}
+
+@article{phuong2019convergence,
+  title={On the Convergence Proof of {AMSGrad} and a New Version},
+  author={Phuong, Tran Thi and Phong, Le Trieu},
+  journal={arXiv preprint arXiv:1904.03590},
+  year={2019}
+}
+
+@article{bottou1991stochastic,
+  title={Stochastic gradient learning in neural networks},
+  author={Bottou, L{\'e}on and others},
+  journal={Proceedings of Neuro-N{\i}mes},
+  volume={91},
+  number={8},
+  pages={12},
+  year={1991},
+  publisher={Nimes}
+}
+
+@article{mcmahan2010adaptive,
+  title={Adaptive bound optimization for online convex optimization},
+  author={McMahan, H Brendan and Streeter, Matthew},
+  journal={arXiv preprint arXiv:1002.4908},
+  year={2010}
+}
+
+@article{zou2018convergence,
+  title={On the convergence of weighted adagrad with momentum for training deep neural networks},
+  author={Zou, Fangyu and Shen, Li},
+  journal={arXiv preprint arXiv:1808.03408},
+  year={2018}
+}
+
+@incollection{danilova2022recent,
+  title={Recent theoretical advances in non-convex optimization},
+  author={Danilova, Marina and Dvurechensky, Pavel and Gasnikov, Alexander and Gorbunov, Eduard and Guminov, Sergey and Kamzolov, Dmitry and Shibaev, Innokentiy},
+  booktitle={High-Dimensional Optimization and Probability},
+  pages={79--163},
+  year={2022},
+  publisher={Springer}
+}
+
+@article{duchi2013estimation,
+  title={Estimation, optimization, and parallelism when data is sparse},
+  author={Duchi, John and Jordan, Michael I and McMahan, Brendan},
+  journal={Advances in Neural Information Processing Systems},
+  volume={26},
+  year={2013}
+}
+
+@book{goodfellow2016deep,
+  title={Deep learning},
+  author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
+  year={2016},
+  publisher={MIT press}
+}
+
+@article{levy2016power,
+  title={The power of normalization: Faster evasion of saddle points},
+  author={Levy, Kfir Y},
+  journal={arXiv preprint arXiv:1611.04831},
+  year={2016}
+}
+
+@article{hazan2015beyond,
+  title={Beyond convexity: Stochastic quasi-convex optimization},
+  author={Hazan, Elad and Levy, Kfir and Shalev-Shwartz, Shai},
+  journal={Advances in neural information processing systems},
+  volume={28},
+  year={2015}
+}
+
+@inproceedings{pan2022toward,
+  title={Toward Understanding Why {Adam} Converges Faster Than {SGD} for Transformers},
+  author={Pan, Yan and Li, Yuanzhi},
+  booktitle={OPT 2022: Optimization for Machine Learning (NeurIPS 2022 Workshop)},
+  year={2022},
+  url={https://openreview.net/forum?id=Sf1NlV2r6PO}
+}
+
+@inproceedings{foret2021sharpness,
+  title={Sharpness-aware Minimization for Efficiently Improving Generalization},
+  author={Foret, Pierre and Kleiner, Ariel and Mobahi, Hossein and Neyshabur, Behnam},
+  booktitle={International Conference on Learning Representations},
+  year={2021}
+}
