Update sty vector to boldsymbol

--- a/panyan.sty
+++ b/panyan.sty
@@ -130,6 +130,7 @@
 \DeclareMathOperator{\ex}{ex} % extremal
 \DeclareMathOperator{\dom}{dom}
 \DeclareMathOperator{\im}{im}
+\DeclareMathOperator{\meas}{meas}
 \newcommand{\stirlingnum}{\genfrac{\{}{\}}{0pt}{}}
 
 % number systems
@@ -241,60 +242,60 @@
 \newcommand{\Zb}{\mathbb{Z}}
 
 % mathbf lowercase
-\newcommand{\av}{\mathbf{a}}
-\newcommand{\bv}{\mathbf{b}}
-\newcommand{\cv}{\mathbf{c}}
-\newcommand{\dv}{\mathbf{d}}
-\newcommand{\ev}{\mathbf{e}}
-\newcommand{\fv}{\mathbf{f}}
-\newcommand{\gv}{\mathbf{g}}
-\newcommand{\hv}{\mathbf{h}}
-\newcommand{\iv}{\mathbf{i}}
-\newcommand{\jv}{\mathbf{j}}
-\newcommand{\kv}{\mathbf{k}}
-\newcommand{\lv}{\mathbf{l}}
-\newcommand{\mv}{\mathbf{m}}
-\newcommand{\nv}{\mathbf{n}}
-\newcommand{\ov}{\mathbf{o}}
-\newcommand{\pv}{\mathbf{p}}
-\newcommand{\qv}{\mathbf{q}}
-\newcommand{\rv}{\mathbf{r}}
-\newcommand{\sv}{\mathbf{s}}
-\newcommand{\tv}{\mathbf{t}}
-\newcommand{\uv}{\mathbf{u}}
-\newcommand{\vv}{\mathbf{v}}
-\newcommand{\wv}{\mathbf{w}}
-\newcommand{\xv}{\mathbf{x}}
-\newcommand{\yv}{\mathbf{y}}
-\newcommand{\zv}{\mathbf{z}}
+\newcommand{\av}{\boldsymbol a}
+\newcommand{\bv}{\boldsymbol b}
+\newcommand{\cv}{\boldsymbol c}
+\newcommand{\dv}{\boldsymbol d}
+\newcommand{\ev}{\boldsymbol e}
+\newcommand{\fv}{\boldsymbol f}
+\newcommand{\gv}{\boldsymbol g}
+\newcommand{\hv}{\boldsymbol h}
+\newcommand{\iv}{\boldsymbol i}
+\newcommand{\jv}{\boldsymbol j}
+\newcommand{\kv}{\boldsymbol k}
+\newcommand{\lv}{\boldsymbol l}
+\newcommand{\mv}{\boldsymbol m}
+\newcommand{\nv}{\boldsymbol n}
+\newcommand{\ov}{\boldsymbol o}
+\newcommand{\pv}{\boldsymbol p}
+\newcommand{\qv}{\boldsymbol q}
+\newcommand{\rv}{\boldsymbol r}
+\newcommand{\sv}{\boldsymbol s}
+\newcommand{\tv}{\boldsymbol t}
+\newcommand{\uv}{\boldsymbol u}
+\newcommand{\vv}{\boldsymbol v}
+\newcommand{\wv}{\boldsymbol w}
+\newcommand{\xv}{\boldsymbol x}
+\newcommand{\yv}{\boldsymbol y}
+\newcommand{\zv}{\boldsymbol z}
 
 % mathbf uppercase
-\newcommand{\Av}{\mathbf{A}}
-\newcommand{\Bv}{\mathbf{B}}
-\newcommand{\Cv}{\mathbf{C}}
-\newcommand{\Dv}{\mathbf{D}}
-\newcommand{\Ev}{\mathbf{E}}
-\newcommand{\Fv}{\mathbf{F}}
-\newcommand{\Gv}{\mathbf{G}}
-\newcommand{\Hv}{\mathbf{H}}
-\newcommand{\Iv}{\mathbf{I}}
-\newcommand{\Jv}{\mathbf{J}}
-\newcommand{\Kv}{\mathbf{K}}
-\newcommand{\Lv}{\mathbf{L}}
-\newcommand{\Mv}{\mathbf{M}}
-\newcommand{\Nv}{\mathbf{N}}
-\newcommand{\Ov}{\mathbf{O}}
-\newcommand{\Pv}{\mathbf{P}}
-\newcommand{\Qv}{\mathbf{Q}}
-\newcommand{\Rv}{\mathbf{R}}
-\newcommand{\Sv}{\mathbf{S}}
-\newcommand{\Tv}{\mathbf{T}}
-\newcommand{\Uv}{\mathbf{U}}
-\newcommand{\Vv}{\mathbf{V}}
-\newcommand{\Wv}{\mathbf{W}}
-\newcommand{\Xv}{\mathbf{X}}
-\newcommand{\Yv}{\mathbf{Y}}
-\newcommand{\Zv}{\mathbf{Z}}
+\newcommand{\Av}{\boldsymbol A}
+\newcommand{\Bv}{\boldsymbol B}
+\newcommand{\Cv}{\boldsymbol C}
+\newcommand{\Dv}{\boldsymbol D}
+\newcommand{\Ev}{\boldsymbol E}
+\newcommand{\Fv}{\boldsymbol F}
+\newcommand{\Gv}{\boldsymbol G}
+\newcommand{\Hv}{\boldsymbol H}
+\newcommand{\Iv}{\boldsymbol I}
+\newcommand{\Jv}{\boldsymbol J}
+\newcommand{\Kv}{\boldsymbol K}
+\newcommand{\Lv}{\boldsymbol L}
+\newcommand{\Mv}{\boldsymbol M}
+\newcommand{\Nv}{\boldsymbol N}
+\newcommand{\Ov}{\boldsymbol O}
+\newcommand{\Pv}{\boldsymbol P}
+\newcommand{\Qv}{\boldsymbol Q}
+\newcommand{\Rv}{\boldsymbol R}
+\newcommand{\Sv}{\boldsymbol S}
+\newcommand{\Tv}{\boldsymbol T}
+\newcommand{\Uv}{\boldsymbol U}
+\newcommand{\Vv}{\boldsymbol V}
+\newcommand{\Wv}{\boldsymbol W}
+\newcommand{\Xv}{\boldsymbol X}
+\newcommand{\Yv}{\boldsymbol Y}
+\newcommand{\Zv}{\boldsymbol Z}
 
 % bold greek lowercase
 \newcommand{\alphav     }{\boldsymbol \alpha     }
@@ -363,3 +364,4 @@
     \hfill $\displaystyle #1$
     \hfill \refstepcounter{equation}
 }
+
